<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textSize="30sp"
                android:textStyle="bold"
                android:id="@+id/matchedUserName"
                android:gravity="center"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:src="@drawable/placeholderprofile"
                android:layout_gravity="center_horizontal"
                android:id = "@+id/profilePicture"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skilllearnSelection"
                android:fontFamily="sans-serif-black"
                android:textSize="25sp" />

            <!-- available skill checkboxes -->

            <LinearLayout
                android:id="@+id/selectContainerLearn"
                android:orientation="vertical"
                android:padding="0dp"
                android:layout_margin="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skillteachSelection"
                android:fontFamily="sans-serif-black"
                android:textSize="25sp" />

            <!-- available skill checkboxes -->

            <LinearLayout
                android:id="@+id/selectContainerTeach"
                android:orientation="vertical"
                android:padding="0dp"
                android:layout_margin="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/matchMessage"
                android:fontFamily="sans-serif-black"
                android:textSize="25sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter something..." />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skillswap_invite"
                android:id="@+id/sendSkillswapRequest"/>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
